feat: Add Vue 3 + Tailwind CSS frontend interface
✨ Features:
- Beautiful, responsive web interface with Vue 3 and Tailwind CSS
- Real-time text analysis with loading states
- Server status monitoring with health check
- Clean error handling and user feedback
- Display of active business rules
- CORS-enabled backend communication

🔧 Backend improvements:
- Added /health endpoint for status monitoring
- Enhanced CORS support for frontend integration
- Updated API documentation with complete examples

📁 Project structure:
- frontend/ - Complete Vue 3 application
- EXAMPLES.md - Usage examples and test cases
- start.sh - Automated startup script for both services
- Enhanced documentation and setup instructions

🌐 Access:
- Frontend: http://localhost:5173
- Backend: http://localhost:3001
- Health check: http://localhost:3001/health

--- a/package.json
+++ b/package.json
@@ -8,16 +8,24 @@
     "start": "node src/index.js",
     "server": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "install-deps": "npm install"
+    "install-deps": "npm install",
+    "start-all": "./start.sh",
+    "setup-frontend": "cd frontend && npm install"
   },
   "dependencies": {
-    "ollama": "^0.5.0",
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "ollama": "^0.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   },
-  "keywords": ["ollama", "rules", "ai", "nodejs"],
+  "keywords": [
+    "ollama",
+    "rules",
+    "ai",
+    "nodejs"
+  ],
   "author": "",
   "license": "MIT"
 }
